2005-10-10  David Schleef  <ds@schleef.org>

	* libswfdec/jpeg/huffman.c: (huffman_table_decode_macroblock):
	* libswfdec/jpeg/jpeg.c: (generate_code_table):
	* libswfdec/jpeg/jpeg_debug.h: Turn off JPEG debugging.

2005-08-29  Eric Anholt  <anholt@FreeBSD.org>

	* libswfdec/actions_builtin.c: (movieclip_new):
	Fix another GC breakage in movieclip rooting.  Roots are added as
	pointers to gc-things (where a gc-thing is a pointer to a JS_object,
	jdouble, etc.).  However, the pointer-to-gcthing must remain valid until
	JS_RemoveRoot, while we were passing a pointer to a stack variable.
	Many thanks to Brendan Eich (spidermonkey developer) for giving me the
	pointer on how to fix it.

2005-08-29  Eric Anholt  <anholt@FreeBSD.org>

	* libswfdec/actions.c: (swfdec_init_context):
	* libswfdec/actions_builtin.c: (action_register_sprite_seg):
	* libswfdec/swfdec_actions.h:
	Expand the scope of GC debugging, exposing a new issue quickly.

2005-08-29  Eric Anholt  <anholt@FreeBSD.org>

	* libswfdec/actions_builtin.c: (swfdec_init_context_builtins):
	Don't forget to initialize the jsval when setting _root.  Fixes a GC
	crash, at a minimum.

2005-08-27  Eric Anholt  <anholt@FreeBSD.org>

	* libswfdec/actions.c: (swfdec_init_context), (action_script_call),
	(swfdec_action_script_execute), (stack_push):
	* libswfdec/actions_builtin.c: (movieclip_new):
	* libswfdec/actions_tags.c: (stack_pop_to_string),
	(stack_pop_to_object), (stack_pop_to_number), (stack_pop_to_int32),
	(stack_pop_to_bool), (action_alloc_stack_argv),
	(action_free_stack_argv), (action_push), (action_binary_op),
	(action_string_equals), (action_string_length),
	(action_string_add), (action_string_extract), (action_string_less),
	(action_mb_string_length), (action_mb_string_extract),
	(action_to_integer), (action_char_to_ascii),
	(action_ascii_to_char), (action_mb_char_to_ascii),
	(action_mb_ascii_to_char), (action_if), (action_get_variable),
	(action_set_variable), (action_define_local),