@@ -1,3 +1,8 @@
+2005-10-16  Eric Anholt  <anholt@FreeBSD.org>
+
+	* libswfdec/actions_tags.c: (action_push):
+	Fix a memory leak in string pushes.
+
 2005-10-10  David Schleef  <ds@schleef.org>
 
 	* libswfdec/jpeg/huffman.c: (huffman_table_decode_macroblock):
